// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs only render one tab title as selected 1`] = `
<styled.div
  data-cosmos-key="tabs"
>
  <styled.div>
    <styled.a
      data-cosmos-key="tabs.item"
      key="0"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={true}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="1"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="2"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
  </styled.div>
  <styled.div
    key=".0"
    title="Title 1"
  >
    <div
      className="content-1"
    />
  </styled.div>
</styled.div>
`;

exports[`Tabs only render one tab title as selected 2`] = `
<styled.div
  data-cosmos-key="tabs"
>
  <styled.div>
    <styled.a
      data-cosmos-key="tabs.item"
      key="0"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="1"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={true}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="2"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
  </styled.div>
  <styled.div
    key=".1"
    title="Title 2"
  >
    <div
      className="content-2"
    />
  </styled.div>
</styled.div>
`;

exports[`Tabs only render one tab title as selected 3`] = `
<styled.div
  data-cosmos-key="tabs"
>
  <styled.div>
    <styled.a
      data-cosmos-key="tabs.item"
      key="0"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="1"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="2"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={true}
      tabIndex="0"
    />
  </styled.div>
  <styled.div
    key=".2"
    title="Title 3"
  >
    <div
      className="content-3"
    />
  </styled.div>
</styled.div>
`;

exports[`Tabs renders only selected tab content 1`] = `[Function]`;
